--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -1,10 +1,59 @@
-<!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <title>Register</title>
+
+    <link rel="icon" href="images/customer.ico "/>
+
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+       
+    <!-- Boostrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    
+    <!-- Boostrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- Our CSS -->
+    <link rel="stylesheet" href="css/our.css" />
+
 </head>
 <body>
-	Registration
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="login.do" class="navbar-brand"><strong>Login</strong></a>
+            </div>
+        </div>
+    </nav>
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3>Register</h3>
+            </div>
+            <div class="form-group">
+                <input id="firstName" name="firstName" placeholder="First Name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input id="lastName" name="lastName" placeholder="Last Name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input id="username" name="username" placeholder="Username" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input id="password" name="password" placeholder="Password" type="password" class="form-control password-large " />
+            </div>
+            <div class="form-group">
+                <input id="repeatPassword" placeholder="Repeat Password" type="password" class="form-control password-large " />
+            </div>
+            <div id="registerationMessage"></div>
+            <button id="submit" class="btn btn-md btn-success btn-block">Submit</button>
+            <div class="panel-footer">
+                <a>Forgot your password?</a>
+            </div>
+        </div>
+    </div>
+    <script src="js/register.js"></script>
 </body>
 </html>
